Call templates per entityType and refactor code